# tic-tac-toe

./: CMakeLists.txt  README.md  build.sh  kk.c  kk.cpp
lib/: board.cpp  board.h
